# ia2

./: .gitignore  .gitmodules  Cargo.toml  Justfile  README.md  package.json  pnpm-lock.yaml
.cargo/: config.toml
.claude/: launch.json
.claude/skills/industrial-automation-skill/: SKILL.md
.claude/skills/industrial-automation-skill/checklists/: first-contact.md  handoff.md
.claude/skills/industrial-automation-skill/references/: 01-mental-model.md  02-cli-reference.md  03-agent-sessions.md  04-workflows.md  05-iec-61131.md  06-devices-iomap-tasks.md  07-troubleshooting.md  08-hmi.md
.github/workflows/: ci.yml  mac.yml  release.yml
.moon/: workspace.yml
MEMORY/: graphical-languages.md  principles.md
apps/mac/: Package.swift  build.sh
apps/mac/.build/: build.db  debug.yaml
apps/mac/.build/arm64-apple-macosx/debug/: IA2  plugin-tools-description.json
apps/mac/.build/arm64-apple-macosx/debug/IA2.build/: AppDelegate.d  AppDelegate.swiftdeps  BackendSupervisor.d  BackendSupervisor.swiftdeps  IA2.emit-module.d  WebViewHost.d  WebViewHost.swiftdeps  WindowController.d  WindowController.swiftdeps  main.d  main.swiftdeps  master.priors  output-file-map.json  sources
apps/mac/.build/arm64-apple-macosx/debug/Modules/: IA2.swiftdoc  (+2 more)
apps/mac/Resources/: make-icon.swift
apps/mac/Sources/IA2/: AppDelegate.swift  BackendSupervisor.swift  WebViewHost.swift  WindowController.swift  main.swift
apps/web/: .cta.json  hmi.html  index.html  package.json  vite.config.ts
apps/web/public/: manifest.json
apps/web/src/: hmi-main.tsx  main.tsx  styles.css
apps/web/src/components/charts/: Sparkline.tsx  TrendChart.tsx
apps/web/src/components/dialogs/: ImportLibraryDialog.tsx  NewDeviceDialog.tsx  NewEdgeDialog.tsx  NewFolderDialog.tsx  NewPouDialog.tsx  NewProjectDialog.tsx  OpenProjectDialog.tsx  ProjectEmptyState.tsx
apps/web/src/components/editor/: DiagnosticsBanner.tsx  FBDEditor.tsx  LDEditor.tsx  SFCEditor.tsx  STEditor.tsx  acid-theme.ts  iec61131-language.ts
apps/web/src/components/hmi/: HmiCanvas.tsx  HmiEditorPanel.tsx  HmiStandalone.tsx  host.tsx  panel-health.test.ts  panel-health.ts  symbols.tsx
apps/web/src/components/layout/: AgentStatusBar.tsx  AgentsPane.tsx  CanopenDeviceEditor.tsx  ConnectionsPane.tsx  DatasheetView.tsx  DevicePane.tsx  EdgePane.tsx  EthercatDeviceEditor.tsx  HmiPane.tsx  HmiSection.tsx  IconRail.tsx  IoMapPane.tsx  ModbusDeviceEditor.tsx  MonitorPane.tsx  OpcuaDeviceEditor.tsx  ProgramPane.tsx  ProjectPane.tsx  ProjectTree.tsx  QuickOpen.tsx  SystemIndication.tsx  TasksPane.tsx  VariablesPanel.tsx  WindowTitleBar.tsx  Workbench.tsx  deviceEditorShared.tsx
apps/web/src/components/ui/: TakeoverOverlay.tsx  badge.tsx  button.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  enum-select.tsx  error-box.tsx  field.tsx  input.tsx  number-cell.tsx  select.tsx
apps/web/src/lib/: api.ts  dark-mode.ts  fbd-edit.test.ts  fbd-edit.ts  hmi-action.test.ts  hmi-action.ts  hmi-actions.test.ts  hmi-actions.ts  hmi-binding.test.ts  hmi-binding.ts  ld-edit.test.ts  ld-edit.ts  ld-fbs.ts  library-datasheet.test.ts  library-datasheet.ts  lsp-client.ts  program-vars.ts  project-tree.ts  sfc-edit.test.ts  sfc-edit.ts  var-history.test.ts  var-history.ts  write-encoding.ts
apps/web/src/routes/: __root.tsx  index.tsx
apps/web/src/state/: agent-activity.ts  hmi-live.ts  invalidation.ts  live-feed.ts  runtime.tsx
crates/cli/: Cargo.toml
crates/cli/src/: announce.rs  http.rs  main.rs
crates/cli/src/cmd/: agent.rs  analysis.rs  config.rs  device.rs  edge.rs  hmi.rs  mod.rs  pou.rs  project.rs  runtime.rs
crates/cli/tests/: cli.rs
crates/cli/tests/fixtures/: bad.fbd.json  bad.ld.json  bad.sfc.json  good.fbd.json  good.ld.json  good.sfc.json
crates/esi/: Cargo.toml
crates/esi/src/: assemble.rs  lib.rs  model.rs  num.rs
crates/iocore/: Cargo.toml
crates/iocore/src/: health.rs  lib.rs
crates/iomap-canopen/: Cargo.toml
crates/iomap-canopen/src/: bus.rs  frame.rs  lib.rs  socketcan_bus.rs
crates/iomap-canopen/tests/: sim_slave.rs
crates/iomap-ethercat/: Cargo.toml
crates/iomap-ethercat/src/: bits.rs  cam.rs  esi_map.rs  gear.rs  lib.rs  real.rs  sim.rs  validate.rs
crates/iomap-modbus/: Cargo.toml
crates/iomap-modbus/src/: client.rs  lib.rs  slave.rs
crates/iomap-modbus/tests/: bulk_poll.rs  failsafe.rs  flaky_link.rs
crates/iomap-opcua/: Cargo.toml
crates/iomap-opcua/examples/: demo_server.rs  fake_dcs.rs  probe_live.rs
crates/iomap-opcua/src/: lib.rs
crates/iomap-opcua/tests/: connect_timeout.rs  embedded_server.rs
crates/ironplc-bridge/: Cargo.toml  build.rs
crates/ironplc-bridge/src/: errors.rs  fbd_transpile.rs  ld_transpile.rs  lib.rs  problem_docs.rs  retain.rs  runtime.rs  sfc_transpile.rs
crates/ironplc-bridge/tests/: fb_output_repro.rs
crates/lsp-launcher/: Cargo.toml
crates/lsp-launcher/src/: main.rs
crates/project/: Cargo.toml
crates/project/src/: errors.rs  fbd.rs  hmi.rs  iomap_check.rs  ld.rs  lib.rs  paths.rs  sfc.rs  store.rs  types.rs
crates/project/templates/: main.st
crates/project/tests/: device_toml.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs  main.rs  northbound.rs
crates/server/: Cargo.toml
crates/server/src/: catalog.rs  edges.rs  error.rs  events.rs  hmi_routes.rs  library.rs  main.rs  routes.rs  sample.rs  state.rs
crates/server/tests/: api_doc_coverage.rs
docs/: api.md  edge-deploy.md  hmi-design.md
docs/adr/: 0001-ironplc-ia2-boundary.md
examples/eg_gear_incycle/: README.md  iomap.toml  project.toml  tasks.toml
examples/eg_gear_incycle/devices/: servo.toml
examples/eg_gear_incycle/pous/: main.st
examples/nx6_modbus/: README.md  iomap.toml  project.toml  tasks.toml
examples/nx6_modbus/devices/: coupler.toml
examples/nx6_modbus/pous/: main.st
examples/supervisory-demo/: README.md  iomap.toml  northbound.toml  project.toml  tasks.toml
examples/supervisory-demo/devices/: dcs.toml
examples/supervisory-demo/pous/: main.st
infra/: controlsoftware.service  ia2.service  install.sh
scripts/: import-fb-library.sh  install-skill.sh
(+290 files in other folders)
