[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"
publish = false
repository = "https://github.com/supcon-international/controlsoftware"

[workspace.dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }

# http
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# type sharing with TS frontend
ts-rs = { version = "10", features = ["serde-compat", "no-serde-warnings"] }

# I/O
tokio-modbus = "0.17"
ethercrab = "0.7"

# errors
anyhow = "1"
thiserror = "2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
