[workspace]
resolver = "2"
members = ["crates/*"]
exclude = ["vendor/*"]

[workspace.package]
# Edition 2021 matches vendored ironplc; their subcrates use
# `edition.workspace = true` and resolve to our [workspace.package] because
# of path-dep + nested-workspace quirks.
version = "0.0.1"
edition = "2021"
authors = []
license = "Apache-2.0"
publish = false
repository = "https://github.com/supcon-international/controlsoftware"

[workspace.dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"

# http
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# type sharing with TS frontend
ts-rs = { version = "10", features = ["serde-compat", "no-serde-warnings"] }

# I/O
tokio-modbus = { version = "0.17", features = ["rtu", "tcp", "rtu-server", "tcp-server"] }
ethercrab = "0.7"

# errors
anyhow = "1"
thiserror = "2"

# project on-disk model
toml = "0.8"
dirs = "5"

# async trait objects
async-trait = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
