[workspace]
resolver = "2"
members = ["crates/*"]
exclude = ["vendor/*"]

# clap is only used by the CLI crate today; declare here for workspace
# coherence so other crates can add it without version drift.
[workspace.dependencies.clap]
version = "4"
features = ["derive"]

[workspace.package]
# Edition 2021 matches vendored ironplc; their subcrates use
# `edition.workspace = true` and resolve to our [workspace.package] because
# of path-dep + nested-workspace quirks.
version = "0.0.1"
edition = "2021"
authors = []
license = "Apache-2.0"
publish = false
repository = "https://github.com/supcon-international/ia2"

[workspace.dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"

# http
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
# `fs` lets the server host the built React app for desktop / single-binary
# distribution (`server --static-dir apps/web/dist`). `cors` + `trace` are
# the original feature set; keep them.
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# type sharing with TS frontend
ts-rs = { version = "10", features = ["serde-compat", "no-serde-warnings"] }

# I/O
tokio-modbus = { version = "0.17", features = ["rtu", "tcp", "rtu-server", "tcp-server"] }
# Direct dep so `iomap-modbus` can construct a SerialStream for RTU
# without going through tokio-modbus's internal types. tokio-modbus
# pulls tokio-serial transitively via its `rtu` feature, but pinning
# it explicitly here keeps the Parity / StopBits / DataBits enums we
# use in `project::types` stable across tokio-modbus upgrades.
tokio-serial = "5"
ethercrab = "0.7"
# Drives ethercrab's async-io-based tx_rx_task on a dedicated thread; we
# don't impose smol on the rest of the codebase (everything else is tokio).
smol = "2"

# errors
anyhow = "1"
thiserror = "2"

# EtherCAT ESI (EtherCAT Slave Information) XML parsing. Used by the
# standalone `esi` crate, which is deliberately free of any fieldbus
# dependency so it can be parsed/tested without hardware.
quick-xml = { version = "0.40", features = ["serialize"] }

# project on-disk model
toml = "0.8"
dirs = "5"

# async trait objects
async-trait = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
