[package]
name = "controlsoftware-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

# Single binary named `cs` — short, easy to type, hard to collide with
# anything else in /usr/local/bin. We standardise on the lowercase
# command name across docs.
[[bin]]
name = "cs"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

ironplc-bridge = { path = "../ironplc-bridge" }
project = { path = "../project" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
