[package]
name = "ia2-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

# Single binary named `cs` — short, easy to type, hard to collide with
# anything else in /usr/local/bin. We standardise on the lowercase
# command name across docs.
[[bin]]
name = "cs"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
# Sync HTTP client for the runtime debug subcommands. ureq is the
# smallest mainstream option that doesn't drag tokio into the CLI's
# dependency closure; the CLI is already mostly synchronous and we
# only need request-response semantics.
ureq = { version = "2", default-features = false, features = ["json"] }

ironplc-bridge = { path = "../ironplc-bridge" }
project = { path = "../project" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
