[package]
name = "iomap-canopen"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true

iocore = { path = "../iocore" }
project = { path = "../project" }

# SocketCAN is a Linux kernel interface; the real transport only exists
# there. Dev machines (macOS) and tests use the `_sim` in-memory bus,
# same convention as iomap-ethercat's `nic = "_sim"`.
[target.'cfg(target_os = "linux")'.dependencies]
socketcan = { version = "3.5", features = ["tokio"] }
