[package]
name = "iomap-ethercat"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
tokio.workspace = true
ethercrab.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true

iocore = { path = "../iocore" }
project = { path = "../project" }
