[package]
name = "iomap-modbus"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
tokio.workspace = true
tokio-modbus.workspace = true
# Direct dep — the RTU connect path opens a SerialStream and hands
# it to tokio-modbus's `rtu::attach_slave`. Without this we'd have
# to traffic in tokio-modbus's re-exports which aren't stable.
tokio-serial.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true

iocore = { path = "../iocore" }
project = { path = "../project" }
