[package]
name = "project"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
ts-rs.workspace = true
toml.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile = "3"
