[package]
name = "server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures-util.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ts-rs.workspace = true
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true

ironplc-bridge = { path = "../ironplc-bridge" }
project = { path = "../project" }
iomap-modbus = { path = "../iomap-modbus" }
toml.workspace = true
# Used only for the parent-pid watchdog (kill(pid, 0) probing). Tiny
# transitive footprint and already in our tree via tokio.
libc = "0.2"
